--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "logos_server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/server.js",
+  "version": "0.0.2",
+  "description": "Express.js Logos Server",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "prestart": "npm run build",
     "start": "node ."
   },
   "keywords": [],
@@ -12,5 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "typescript": "^4.2.4"
   }
 }
