--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Express.js Logos Server",
   "main": "dist/server.js",
   "scripts": {
+    "prebuild": "eslint src/**/*.ts --fix", 
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "lint": "eslint src/**/*.ts --fix"
+    "lint": "eslint src/**/*.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "envalid": "^7.1.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
